[gd_scene load_steps=24 format=3 uid="uid://dihaox43xmti6"]

[ext_resource type="Script" path="res://Scenes/UIHandler.gd" id="1_f0vbu"]
[ext_resource type="PackedScene" uid="uid://b6nccrbah3eqv" path="res://GameObjects/Bird/Bird.tscn" id="1_k5qe3"]
[ext_resource type="PackedScene" uid="uid://dcvl7p84hhypb" path="res://GameObjects/Clouds/CloudSpawner.tscn" id="3_8u6c6"]
[ext_resource type="AudioStream" uid="uid://cc1jms5ecphpa" path="res://Music/GuanoRemakeBGM1.ogg" id="3_43snk"]
[ext_resource type="PackedScene" uid="uid://ba40nt4sg0qam" path="res://GameObjects/Roads/RoadSpawner.tscn" id="4_4w3sh"]
[ext_resource type="PackedScene" uid="uid://jexburvvu6qg" path="res://GameObjects/Roads/Road.tscn" id="5_b1n51"]
[ext_resource type="PackedScene" uid="uid://dgdvvad001x8" path="res://GameObjects/Clouds/Cloud2.tscn" id="6_t03o3"]
[ext_resource type="PackedScene" uid="uid://ho8kr7jllvqv" path="res://GameObjects/Clouds/Cloud3.tscn" id="7_yb1an"]
[ext_resource type="PackedScene" uid="uid://b8x60ftyn8tub" path="res://GameObjects/Clouds/Cloud1.tscn" id="8_47wft"]
[ext_resource type="PackedScene" uid="uid://cpa2hvc8g0qew" path="res://GameObjects/Targets/TargetSpawner.tscn" id="9_6xgsp"]
[ext_resource type="PackedScene" uid="uid://b1t5cb853qjhv" path="res://GameObjects/Targets/Bicycle.tscn" id="10_g40k6"]
[ext_resource type="PackedScene" uid="uid://dwcuvjrb08hmr" path="res://GameObjects/Targets/OldLady.tscn" id="11_rj0as"]
[ext_resource type="PackedScene" uid="uid://sgpx8e600jyo" path="res://GameObjects/Targets/Man.tscn" id="13_kb6tx"]
[ext_resource type="PackedScene" uid="uid://dxo64ti5br6gt" path="res://GameObjects/Targets/Skater.tscn" id="13_ngjuq"]
[ext_resource type="PackedScene" uid="uid://bgmlh00ibo5su" path="res://GameObjects/Targets/Bread.tscn" id="14_072vv"]
[ext_resource type="PackedScene" uid="uid://b4g3871mlu5h3" path="res://GameObjects/Targets/Bus.tscn" id="15_ei8lp"]
[ext_resource type="PackedScene" uid="uid://btupy7dgeaa3p" path="res://GameObjects/Targets/Woman.tscn" id="15_jywwo"]
[ext_resource type="PackedScene" uid="uid://dg2of8shkrpao" path="res://GameObjects/Targets/Car1.tscn" id="17_swbrj"]
[ext_resource type="FontFile" uid="uid://cql18wfhkqirx" path="res://Fonts/PRESSSTART2P.TTF" id="17_tl02d"]
[ext_resource type="PackedScene" uid="uid://dmtsthotxx3o8" path="res://GameObjects/Targets/Car2.tscn" id="18_7ehmm"]
[ext_resource type="PackedScene" uid="uid://nyvfjh2ulqon" path="res://GameObjects/Targets/Car3.tscn" id="19_ug24r"]
[ext_resource type="PackedScene" uid="uid://b1sakvb7d0ojp" path="res://GameObjects/Targets/Van.tscn" id="20_qxhv0"]
[ext_resource type="PackedScene" uid="uid://dk2fhwtiyx2vf" path="res://GameObjects/Targets/BadBird.tscn" id="22_hqud8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_f0vbu")

[node name="Bird" parent="." instance=ExtResource("1_k5qe3")]
unique_name_in_owner = true
position = Vector2(143, 123)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_43snk")
autoplay = true

[node name="Roads" type="Node2D" parent="."]
position = Vector2(0, 4)

[node name="RoadSpawner" parent="Roads" instance=ExtResource("4_4w3sh")]
position = Vector2(3000, 475)

[node name="Road" parent="Roads" instance=ExtResource("5_b1n51")]
position = Vector2(602, 475)

[node name="Road2" parent="Roads" instance=ExtResource("5_b1n51")]
position = Vector2(1802, 475)

[node name="Clouds" type="Node2D" parent="."]

[node name="CloudSpawners" type="Node2D" parent="Clouds"]

[node name="CloudSpawnerTop" parent="Clouds/CloudSpawners" instance=ExtResource("3_8u6c6")]
position = Vector2(2056, 70)

[node name="CloudSpawnerBottom" parent="Clouds/CloudSpawners" instance=ExtResource("3_8u6c6")]
position = Vector2(2210, 233)

[node name="Cloud1" parent="Clouds" instance=ExtResource("6_t03o3")]
position = Vector2(752, 67)

[node name="Cloud2" parent="Clouds" instance=ExtResource("7_yb1an")]
position = Vector2(1024, 190)

[node name="Cloud3" parent="Clouds" instance=ExtResource("8_47wft")]
position = Vector2(384, 183)

[node name="Cloud4" parent="Clouds" instance=ExtResource("8_47wft")]
position = Vector2(1330, 104)

[node name="Cloud5" parent="Clouds" instance=ExtResource("7_yb1an")]
position = Vector2(1809, 289)

[node name="Cloud6" parent="Clouds" instance=ExtResource("6_t03o3")]
position = Vector2(1680, 109)

[node name="Targets" type="Node2D" parent="."]

[node name="TargetSpawnerSky" parent="Targets" instance=ExtResource("9_6xgsp")]
position = Vector2(2638, 280)
cooldown_min = 10
cooldown_max = 20
targets = [ExtResource("22_hqud8")]

[node name="TargetSpawnerSidewalkTop" parent="Targets" instance=ExtResource("9_6xgsp")]
position = Vector2(2344, 586)
targets = [ExtResource("14_072vv"), ExtResource("13_kb6tx"), ExtResource("11_rj0as"), ExtResource("13_ngjuq"), ExtResource("15_jywwo"), ExtResource("14_072vv"), ExtResource("14_072vv")]

[node name="TargetSpawnerCycleLane" parent="Targets" instance=ExtResource("9_6xgsp")]
position = Vector2(2604, 662)
targets = [ExtResource("10_g40k6")]

[node name="TargetSpawnerRoadTop" parent="Targets" instance=ExtResource("9_6xgsp")]
position = Vector2(2008, 737)
targets = [ExtResource("15_ei8lp"), ExtResource("17_swbrj"), ExtResource("18_7ehmm"), ExtResource("19_ug24r"), ExtResource("20_qxhv0")]

[node name="TargetSpawnerRoadBottom" parent="Targets" instance=ExtResource("9_6xgsp")]
position = Vector2(2321, 880)
targets = [ExtResource("15_ei8lp"), ExtResource("17_swbrj"), ExtResource("18_7ehmm"), ExtResource("19_ug24r"), ExtResource("20_qxhv0")]

[node name="TargetSpawnerSidewalkBottom" parent="Targets" instance=ExtResource("9_6xgsp")]
position = Vector2(1944, 1013)
targets = [ExtResource("14_072vv"), ExtResource("13_kb6tx"), ExtResource("11_rj0as"), ExtResource("13_ngjuq"), ExtResource("15_jywwo"), ExtResource("14_072vv"), ExtResource("14_072vv"), ExtResource("14_072vv"), ExtResource("14_072vv")]

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 6.0
offset_right = 134.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("17_tl02d")
text = "Score: ?"
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="."]
offset_left = 207.0
offset_right = 319.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("17_tl02d")
text = "Ammo: ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StreakLabel" type="Label" parent="."]
offset_left = 391.0
offset_right = 535.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("17_tl02d")
text = "Streak: ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplierLabel" type="Label" parent="."]
offset_left = 600.0
offset_right = 824.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("17_tl02d")
text = "Multiplier: x?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="rewards_collected" from="Bird" to="." method="_on_bird_rewards_collected"]
[connection signal="shot_fired" from="Bird" to="." method="_on_bird_shot_fired"]
[connection signal="streak_broken" from="Bird" to="." method="_on_bird_streak_broken"]
